--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 streamlit = "^1.39.0"
 matplotlib = "^3.9.2"
+plotly = "^5.24.1"
+statsmodels = "^0.14.4"
 
 
 [build-system]
